styles.css
/* ... */
#footer-logo {
    color: var(--primary);
    display: flex;
    align-items: center;
    cursor: pointer;
    text-decoration: none;
    font-size: 2rem;
}

.footer-links {
    width: 100%;
    max-width: 1000px;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(9rem, 1fr));
    grid-template-rows: 1fr 1fr;
    gap: .5rem;
}

.contact-social-wrapper {
    display: flex;
    flex-wrap: wrap;
}

.footer-links-items {
    display: flex;
    flex-direction: column;
    margin: 16px;
    text-align: left;
}

.footer-links-items:first-child {
    grid-row: 1 / 3;
}

#contact-footer {
    margin-right: 0;
}

.footer-links-items h2 {
    margin-bottom: 16px;
    color: var(--primary);
}

.footer-links-items a {
    color: var(--neutral);
    text-decoration: none;
    margin-bottom: 0.5rem;
}

.footer-links-items a:hover {
    color: var(--secondary);
    transition: 0.3s ease-out;
}

/* Social Icons */

.social-icon-link {
    font-size: 2rem;
    color: var(--primary);
    transition: 0.3s ease-in;
}

.social-icon-link:hover {
    color: var(--secondary);
    transition: 0.3s ease-in;
}

.social-icons {
    display: flex;
    justify-content: space-around;
    padding-top: 1em;
}

#footer-logo {
    color: var(--primary);
    font-size: 2rem;
    transition: 0.3s ease-in;
}

#footer-logo i {
    padding: 1rem;
}

#footer-logo:hover {
    color: var(--secondary);
    transition: 0.3s ease-in;
}

/* Contact Us CSS */

.contact-section {
    background-color: var(--dark-two);
    color: var(--primary);
    width: 100%;
    max-width: 800px;
    margin-left: auto;
    margin-right: auto;
    padding: 6rem 4rem 2rem;
  }

  .contact-section h2 {
    background-image: linear-gradient(to top, var(--primary) 0%, var(--secondary) 100%);
    background-size: 100%;
    -webkit-background-clip: text;
    -moz-background-clip: text;
    -webkit-text-fill-color: transparent;
    -moz-text-fill-color: transparent;
  }
  
.contact-intro > * + * {
    margin-top: 1rem;
}
  
.contact-title {
    font-size: 1.875rem;
    line-height: 2.25rem;
    font-weight: 700;
}
  
.contact-description {
    color: gray;
}
  
.form-group-container {
    display: grid;
    gap: 1rem;
    margin-top: 2rem;
}
  
.form-group {
    display: flex;
    flex-direction: column;
}
  
.form-label {
    margin-bottom: 0.5rem;
}
  
.form-input,
.form-textarea {
    padding: 0.5rem;
    border: 1px solid var(--neutral);
    display: flex;
    height: 2.5rem;
    width: 100%;
    border-radius: 0.375rem;
    font-size: 0.875rem;
    line-height: 1.25rem;
}
  
.form-input::placeholder,
.form-textarea:focus-visible {
    color: gray;
}
  
.form-input:focus-visible,
.form-textarea:focus-visible {
    outline: 2px solid var(--accent-one);
    outline-offset: 2px;
}
  
.form-textarea {
    min-height: 120px;
}
  
.form-submit {
    border: none;
    width: 100%;
    margin-top: 1.2rem;
    background-image: linear-gradient(to top, var(--accent-one) 0%, var(--accent-two) 100%);
    color: var(--neutral);
    padding: 13px 5px;
    border-radius: 0.3rem;
}
  
/* About Us CSS */

.about-main {
    padding: 6rem 2rem 2rem;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
}

.about-main > * {
    flex: 1 1 50%;
    padding: 1rem;
}

.about-us {
    width: 100%;
    padding-top: 0;
}

.about-main h2 { 
    font-size: 2.3rem;
    text-transform: uppercase;
    background-image: linear-gradient(to top, var(--primary) 0%, var(--secondary) 100%);
    background-size: 100%;
    -webkit-background-clip: text;
    -moz-background-clip: text;
    -webkit-text-fill-color: transparent;
    -moz-text-fill-color: transparent;
}

#about-us-img {
    height: 100%;
    width: 100%;
    min-width: 20rem;
    max-width: 30rem;
    padding-top: 4rem;
}

/* Dogs Page CSS */

.dogs-main {
    background-color: var(--black);
    padding: 6rem 2rem 2rem;
    display: flex;
    flex-wrap: wrap;
}

.dogs-main > * {
    flex: 1 1 50%;
}

.dogs-img {
    width: 100%;
    max-width: 25rem;
}

.dogs-main h1 {
    font-size: 4rem;
    text-transform: uppercase;
    background-image: linear-gradient(to top, var(--secondary) 0%, var(--primary) 100%);
    background-size: 100%;
    -webkit-background-clip: text;
    -moz-background-clip: text;
    -webkit-text-fill-color: transparent;
    -moz-text-fill-color: transparent;
}

.dogs-main h2 {
    font-size: 3rem;
    text-transform: uppercase;
    background-image: linear-gradient(to top, var(--primary) 0%, var(--secondary) 100%);
    background-size: 100%;
    -webkit-background-clip: text;
    -moz-background-clip: text;
    -webkit-text-fill-color: transparent;
    -moz-text-fill-color: transparent;
}

.dogs-main p {
    color: #E8E9F3;
    font-size: 1.25rem;
    line-height: 2rem;
    font-weight: 300;
}
/* ... */

